Fix contact spacing

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -248,13 +248,6 @@ a:focus {
     padding-top: 8em;
 }
 
-.contact-section {
-    width: 100%;
-    padding: 50px 0;
-    margin: 0;
-    margin-top: 4em;
-}
-
 .echipa {
     margin: 0 10%;
 }
